test/fail_compilation/fail18938.d
// REQUIRED_ARGS: -c -Ifail_compilation/imports/ fail_compilation/imports/test18938a/cache.d fail_compilation/imports/test18938a/file.d
/*
TEST_OUTPUT:
---
fail_compilation/imports/test18938b/file.d(20): Error: undefined identifier `No`
---
*/

void main() {}
